# keydeck

./: .gitignore  .gitmodules  CONTEXT_VARS_PLAN.md  Cargo.toml  Configuration.md  README.md  TODO.md  build.rs  build.sh  stage-sidecar.sh
.github/workflows/: build-release.yml
docker/: build.sh
docker/arch/: Dockerfile
docker/ubuntu/: Dockerfile
driver/: Cargo.toml  DEVICE_JSON_FORMAT.md  PROTOCOL.md  UPSTREAM_SYNC.md
driver/devices/: Ajazz-AKP03.json  Ajazz-AKP03E-0x1002.json  Ajazz-AKP03E-0x3002.json  Ajazz-AKP03R.json  Ajazz-AKP153.json  Ajazz-AKP153E-0x1010.json  Ajazz-AKP153E-0x3010.json  Ajazz-AKP153R.json  Ajazz-AKP815.json  Mad-Dog-GK150K.json  MagTran-M3.json  Mars-Gaming-MSD-ONE.json  Mars-Gaming-MSD-TWO.json  Mirabox-HSV293S.json  Mirabox-HSV293SV3-0x1005.json  Mirabox-HSV293SV3-0x1014.json  Mirabox-N3.json  Mirabox-N3EN.json  Redragon-SS-551.json  Risemode-Vision 01.json  Soomfon-Stream Controller SE.json  StreamDock-K1Pro-0x1019.json  StreamDock-K1Pro.json  StreamDock-M18-0x1012.json  StreamDock-M18.json  StreamDock-N1-0x1000.json  StreamDock-N1.json  StreamDock-N4-0x1001.json  StreamDock-N4-0x1007.json  StreamDock-N4Pro-0x1021.json  StreamDock-N4Pro.json  StreamDock-XL-0x1031.json  StreamDock-XL.json  TMICE-Stream Controller.json  TreasLin-N3.json
driver/examples/: akp03r.rs  test_paths.rs  test_priority.rs
driver/src/: device.rs  error.rs  images.rs  lib.rs  state.rs  types.rs
driver/src/registry/: definition.rs  error.rs  mod.rs  registry.rs
keydeck-config/: package-lock.json  package.json  stage-sidecar.ps1  stage-sidecar.sh  svelte.config.js
keydeck-config/src/: app.html
keydeck-config/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
keydeck-config/src-tauri/capabilities/: default.json
keydeck-config/src-tauri/icons/: icon.icns
keydeck-config/src-tauri/src/: backup_restore.rs  icon_extractor.rs  lib.rs  linux_icon_finder.rs  macos_icon_finder.rs  main.rs  windows.rs  windows_icon_finder.rs
keydeck-config/src/lib/: stores.ts
keydeck-config/src/lib/components/: ActionEditor.svelte  ButtonDefEditor.svelte  ButtonDefList.svelte  ButtonEditor.svelte  ButtonGrid.svelte  CleanUpIcons.svelte  ColorField.svelte  ColorPicker.svelte  DeviceSelector.svelte  DeviceSettings.svelte  DrawConfigEditor.svelte  EmojiAutocomplete.svelte  GlobalSettings.svelte  HelperButtons.svelte  KeyRecorder.svelte  LogViewer.svelte  MacroList.svelte  PageEditor.svelte  PageList.svelte  ServiceList.svelte  Sidebar.svelte  SystemConfig.svelte  TemplateEditor.svelte  TemplateList.svelte  TemplateSelector.svelte  TextAutocomplete.svelte  TitleBar.svelte  TriStateCheckbox.svelte  WhenEditor.svelte
keydeck-config/src/lib/data/: emojis.ts
keydeck-config/src/lib/utils/: autoFocus.ts  escapeChars.ts
keydeck-config/src/routes/: +layout.ts  +page.svelte
keydeck-config/static/: splashscreen.html
keydeck-types/: Cargo.toml
keydeck-types/src/: device_info.rs  lib.rs  pages.rs
src/: button_image.rs  button_listener.rs  context.rs  device_info.rs  device_listener.rs  device_manager.rs  device_registry_init.rs  device_trait.rs  dynamic_detection.rs  dynamic_params.rs  elgato_device.rs  event.rs  focus_listener.rs  focus_property.rs  focus_property_wayland.rs  graphics_renderer.rs  integrations.rs  key_listener.rs  keyboard.rs  keyboard_wayland.rs  konsole.rs  kwin_script.rs  lib.rs  listener_button.rs  listener_context.rs  listener_device.rs  listener_focus.rs  listener_focus_wayland.rs  listener_signal.rs  listener_sleep.rs  listener_tick.rs  listener_time.rs  lock.rs  main.rs  mirajazz_device.rs  paged_device.rs  pages.rs  platform.rs  press_effect.rs  server.rs  (+8 more)
src/integrations/: kitty.rs  kitty_context_watcher.py
src/listener_button/: unix.rs  windows.rs
src/platform/: keymap.rs  lifecycle.rs  macos.rs  reload.rs  windows.rs
