[package]
name = "keydeck"
version = "0.1.0"
edition = "2021"

[dependencies]
elgato-streamdeck = { git = "https://github.com/teras/elgato-streamdeck.git" }
indexmap = { version = "2.6.0", features = ["serde"] }
image = { version = "0.25.4", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = "0.25"
ab_glyph = "0.2"
font-kit = "0.14"
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
x11rb = { version = "0.13.1", features = ["xtest"] }
dbus = { version = "0.9.7", features = ["stdfd"] }
signal-hook = "0.3.17"
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization (LTO)
codegen-units = 1  # Reduce codegen units for better LTO
panic = "abort"  # Abort on panic to reduce binary size
strip = true       # Strip symbols automatically
