[package]
name = "keydeck"
version = "0.1.0"
edition = "2021"
description = "KeyDeck - Stream Deck controller for Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/teras/keydeck"
authors = ["Teras"]

[lib]
name = "keydeck"
path = "src/lib.rs"

[[bin]]
name = "keydeck"
path = "src/main.rs"
required-features = ["binary"]

[features]
binary = []

[dependencies]
elgato-streamdeck = { git = "https://github.com/teras/elgato-streamdeck.git" }
indexmap = { version = "2.6.0", features = ["serde"] }
image = { version = "0.25.4", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = "0.25"
cosmic-text = "0.14"
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml_ng = "0.10.0"
serde_path_to_error = "0.1"
x11rb = { version = "0.13.1", features = ["xtest"] }
dbus = { version = "0.9.7", features = ["stdfd"] }
signal-hook = "0.3.17"
strum = "0.26.3"
strum_macros = "0.26.4"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
chrono = "0.4"
regex = "1.10"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization (LTO)
codegen-units = 1  # Reduce codegen units for better LTO
panic = "abort"  # Abort on panic to reduce binary size
strip = true       # Strip symbols automatically

# cargo-deb configuration
[package.metadata.deb]
maintainer = "Teras"
section = "utils"
priority = "optional"
assets = [
    ["target/release/keydeck", "usr/bin/", "755"],
]
depends = "libudev1, libusb-1.0-0, libhidapi-hidraw0"

# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/keydeck", dest = "/usr/bin/keydeck", mode = "755" },
]
