[package]
name = "keydeck"
version = "0.9.0"
edition = "2021"
description = "KeyDeck - Stream Deck controller for Linux"
license = "GPL-3.0-or-later"
repository = "https://github.com/teras/keydeck"
authors = ["Panayotis Katsaloulis"]

[lib]
name = "keydeck"
path = "src/lib.rs"

[[bin]]
name = "keydeck"
path = "src/main.rs"

[dependencies]
keydeck-types = { path = "keydeck-types" }
elgato-streamdeck = "0.12"
mirajazz-json = { path = "driver" }
indexmap = { version = "2.13", features = ["serde"] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = "0.26"
cosmic-text = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
serde_path_to_error = "0.1"
strum = { version = "0.26", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1.12"
sysinfo = "0.38"

# --- Linux-specific dependencies ---
[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
x11rb = { version = "0.13", features = ["xtest"] }
zbus = { version = "5", features = ["blocking"] }
signal-hook = "0.4"
ashpd = { version = "0.13", features = ["remote_desktop", "screencast"] }
tokio = { version = "1", features = ["rt"] }

# --- Windows/macOS shared dependencies ---
[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = "2.6"
enigo = "0.3"
notify = "7"
ctrlc = "3"

# --- Windows-specific dependencies ---
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
] }

# --- macOS-specific dependencies ---
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
block2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSString",
    "NSArray",
    "NSNotification",
    "NSRunLoop",
    "NSThread",
    "NSDate",
    "NSOperation",
    "block2",
] }
objc2-app-kit = { version = "0.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
    "NSApplication",
] }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization (LTO)
codegen-units = 1  # Reduce codegen units for better LTO
panic = "abort"  # Abort on panic to reduce binary size
strip = true       # Strip symbols automatically

# cargo-deb configuration
[package.metadata.deb]
maintainer = "Teras"
section = "utils"
priority = "optional"
assets = [
    ["target/release/keydeck", "usr/bin/", "755"],
]
depends = "libudev1, libusb-1.0-0, libhidapi-hidraw0"

# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/keydeck", dest = "/usr/bin/keydeck", mode = "755" },
]
