[package]
name = "keydeck-config"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keydeck_config_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10.0"
keydeck = { path = "../.." }
nix = { version = "0.29", features = ["signal"] }
image = "0.25"
chrono = "0.4"
pelite = "0.10"
ini = "1.3"
once_cell = "1.19"
glob = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
lnk = "0.5"
exeico = "0.1"

